fix: update remote get i18n json

--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -23,6 +23,7 @@
   "Edit Profile": "Edit Profile",
   "Email Address": "Email Address",
   "Email or Password is incorrect. Kindly enter the correct email or passsword.": "Email or Password is incorrect. Kindly enter the correct email or passsword.",
+  "English": "English",
   "Enter Period": "Enter Period",
   "Enter Product Name": "Enter Product Name",
   "Enter flavour": "Enter flavour",
@@ -33,25 +34,28 @@
   "Enter instructions for keeping the food product": "Enter instructions for keeping the food product",
   "Expiry Date": "Expiry Date",
   "Expiry Period": "Expiry Period",
+  "Family Name": "Family Name",
   "First Name": "First Name",
   "Flavour": "Flavour",
   "Food Category": "Food Category",
   "Food Type": "Food Type",
   "Forgot Password?": "Forgot Password?",
+  "Home": "Home",
   "How to keep fresh": "How to keep fresh",
   "How to keep product fresh": "How to keep product fresh",
   "Incorrect Credentials": "Incorrect Credentials",
   "Ingredients": "Ingredients",
   "Instruction": "Instruction",
   "Keep your account safe, please verify your identity by entering your password.": "Keep your account safe, please verify your identity by entering your password.",
-  "Last Name": "Last Name",
+  "Language": "Language",
   "Login": "Login",
   "Login Now": "Login Now",
   "Login Successful!": "Login Successful!",
+  "Mandarin": "Mandarin",
   "Manufacture Date": "Manufacture Date",
   "Manufactured Date": "Manufactured Date",
+  "Melayu": "Melayu",
   "Mobile Number": "Mobile Number",
-  "My Home": "My Home",
   "My Products Batch": "My Products Batch",
   "My Products List": "My Products List",
   "My Profile": "My Profile",
