--- a/src/locales/ms/messages.json
+++ b/src/locales/ms/messages.json
@@ -51,7 +51,7 @@
   "Login": "Log masuk",
   "Login Now": "Log masuk sekarang",
   "Login Successful!": "Log Masuk Berjaya!",
-  "Mandarin": "",
+  "Mandarin": "Mandarin",
   "Manufacture Date": "Tarikh Pembuatan",
   "Manufactured Date": "Tarikh Pembuatan",
   "Melayu": "Melayu",
