--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -40,6 +40,8 @@
   "Food Category": "Food Category",
   "Food Type": "Food Type",
   "Forgot Password?": "Forgot Password?",
+  "Generate QR Code": "Generate QR Code",
+  "History": "History",
   "Home": "Home",
   "How to keep fresh": "How to keep fresh",
   "How to keep product fresh": "How to keep product fresh",
@@ -81,6 +83,7 @@
   "Preview": "Preview",
   "Print Count": "Print Count",
   "Print QR Code": "Print QR Code",
+  "Print request has successfully been sent!": "Print request has successfully been sent!",
   "Product": "Product",
   "Product Batch": "Product Batch",
   "Product Batch ID": "Product Batch ID",
@@ -100,8 +103,11 @@
   "Reprint QR Code": "Reprint QR Code",
   "Resend OTP": "Resend OTP",
   "Scan QR code": "Scan QR code",
+  "Search": "Search",
   "Search Product Name": "Search Product Name",
   "Select Product": "Select Product",
+  "Select The Batch to Print": "Select The Batch to Print",
+  "Serving": "Serving",
   "Setup Product": "Setup Product",
   "Sign Out": "Sign Out",
   "Sign Up": "Sign Up",
@@ -114,6 +120,7 @@
   "View Product Batch": "View Product Batch",
   "View QR Code": "View QR Code",
   "View all": "View all",
+  "You will need to choose the available product from the list. If not found, kindly create the product first.": "You will need to choose the available product from the list. If not found, kindly create the product first.",
   "day": "day",
   "{0}": "{0}"
 }
