fix: update nutirtion facts

--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -72,6 +72,7 @@
   "Nutrition Fact Type": "Nutrition Fact Type",
   "Nutrition Facts": "Nutrition Facts",
   "Nutrition Facts Setup": "Nutrition Facts Setup",
+  "Nutrition_Facts": "Nutrition_Facts",
   "Nutrition_type": "Nutrition_type",
   "Nutritional Facts": "Nutritional Facts",
   "Optional: Upload product photo to showcase the product": "Optional: Upload product photo to showcase the product",
