--- a/src/locales/ms/messages.json
+++ b/src/locales/ms/messages.json
@@ -72,6 +72,7 @@
   "Nutrition Fact Type": "Jenis Fakta Pemakanan",
   "Nutrition Facts": "Fakta Pemakanan",
   "Nutrition Facts Setup": "Pengaturan Fakta Pemakanan",
+  "Nutrition_Facts": "Fakta_Pemakanan",
   "Nutrition_type": "Nutrition_type",
   "Nutritional Facts": "Fakta Pemakanan",
   "Optional: Upload product photo to showcase the product": "Pilihan: Muat naik foto produk untuk mempamerkan produk",
